# codes

./: .gitignore  README.md  codes.py  pyproject.toml
static/: app.js  styles.css
templates/: index.html
