[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codes"
version = "0.1.0"
description = "A tiny FastAPI service for recording code attempts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
codes = "codes:main"

[tool.setuptools]
py-modules = ["codes"]
